# terminal

./: .gitignore  LICENSE  README.md
backend/: Cargo.toml
backend/src/: main.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: site.webmanifest
frontend/src/: App.tsx  index.css  index.tsx
frontend/src/components/: Avatar.tsx  MarketDetail.tsx  MarketList.tsx  OrderBook.tsx  PriceChart.tsx  TopHolders.tsx  TradePanel.tsx  TraderDetail.tsx  TraderList.tsx  TradesFeed.tsx  WalletButton.tsx
frontend/src/lib/: api.ts  favorites.ts  format.ts  polymarket.ts  safeSetup.ts  stream.ts  wallet.ts
